@@ -18,99 +18,112 @@ package com.echothree.control.user.core.server.command;
 
 import com.echothree.control.user.core.common.form.GetEntityAttributesForm;
 import com.echothree.control.user.core.common.result.CoreResultFactory;
-import com.echothree.control.user.core.common.result.GetEntityAttributesResult;
-import com.echothree.model.control.core.common.transfer.EntityAttributeTransfer;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.core.server.entity.ComponentVendor;
-import com.echothree.model.data.core.server.entity.EntityAttributeType;
-import com.echothree.model.data.core.server.entity.EntityType;
+import com.echothree.model.data.core.server.entity.EntityAttribute;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.google.common.base.Splitter;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetEntityAttributesCommand
-        extends BaseSimpleCommand<GetEntityAttributesForm> {
-    
+        extends BaseMultipleEntitiesCommand<EntityAttribute, GetEntityAttributesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.EntityAttribute.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ComponentVendorName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("EntityTypeName", FieldType.ENTITY_TYPE_NAME, true, null, null),
                 new FieldDefinition("EntityAttributeTypeNames", FieldType.STRING, false, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetEntityAttributesCommand */
     public GetEntityAttributesCommand(UserVisitPK userVisitPK, GetEntityAttributesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<EntityAttribute> getEntities() {
         var coreControl = getCoreControl();
-        GetEntityAttributesResult result = CoreResultFactory.getGetEntityAttributesResult();
-        String componentVendorName = form.getComponentVendorName();
-        ComponentVendor componentVendor = coreControl.getComponentVendorByName(componentVendorName);
-        
+        var componentVendorName = form.getComponentVendorName();
+        var componentVendor = coreControl.getComponentVendorByName(componentVendorName);
+        Collection<EntityAttribute> entityAttributes = null;
+
         if(componentVendor != null) {
-            String entityTypeName = form.getEntityTypeName();
-            EntityType entityType = coreControl.getEntityTypeByName(componentVendor, entityTypeName);
-            
+            var entityTypeName = form.getEntityTypeName();
+            var entityType = coreControl.getEntityTypeByName(componentVendor, entityTypeName);
+
             if(entityType != null) {
-                String entityAttributeTypeNames = form.getEntityAttributeTypeNames();
-                
+                var entityAttributeTypeNames = form.getEntityAttributeTypeNames();
+
                 if(entityAttributeTypeNames == null) {
-                    result.setEntityAttributes(coreControl.getEntityAttributeTransfersByEntityType(getUserVisit(), entityType, null));
+                    entityAttributes = coreControl.getEntityAttributesByEntityType(entityType);
                 } else {
-                    List<EntityAttributeTransfer> entityAttributeTransfers = new ArrayList<>();
-                    String []entityAttributeTypeNamesToCheck = Splitter.on(':').trimResults().omitEmptyStrings().splitToList(entityAttributeTypeNames).toArray(new String[0]);
-                    int entityAttributeTypeNamesToCheckLength = entityAttributeTypeNamesToCheck.length;
-                    
+                    var entityAttributeTypeNamesToCheck = Splitter.on(':').trimResults().omitEmptyStrings().splitToList(entityAttributeTypeNames).toArray(new String[0]);
+                    var entityAttributeTypeNamesToCheckLength = entityAttributeTypeNamesToCheck.length;
+
+                    entityAttributes = new ArrayList<>();
+
                     for(int i = 0; i < entityAttributeTypeNamesToCheckLength && !hasExecutionErrors(); i++) {
-                        String entityAttributeTypeName = entityAttributeTypeNamesToCheck[i];
-                        EntityAttributeType entityAttributeType = coreControl.getEntityAttributeTypeByName(entityAttributeTypeName);
-                        
+                        var entityAttributeTypeName = entityAttributeTypeNamesToCheck[i];
+                        var entityAttributeType = coreControl.getEntityAttributeTypeByName(entityAttributeTypeName);
+
                         if(entityAttributeType != null) {
-                            entityAttributeTransfers.addAll(coreControl.getEntityAttributeTransfersByEntityTypeAndEntityAttributeType(getUserVisit(),
-                                    entityType, entityAttributeType, null));
+                            entityAttributes.addAll(coreControl.getEntityAttributesByEntityTypeAndEntityAttributeType(
+                                    entityType, entityAttributeType));
                         } else {
                             addExecutionError(ExecutionErrors.UnknownEntityAttributeTypeName.name(), entityAttributeTypeName);
                         }
                     }
-                    
-                    if(!hasExecutionErrors()) {
-                        result.setEntityAttributes(entityAttributeTransfers);
+
+                    if(hasExecutionErrors()) {
+                        // If we encounter an UnknownEntityAttributeTypeName error, this will end up true and
+                        // we will nuke the results and return nothing.
+                        entityAttributes = null;
                     }
                 }
             } else {
-                addExecutionError(ExecutionErrors.UnknownEntityTypeName.name(), entityTypeName);
+                addExecutionError(ExecutionErrors.UnknownEntityTypeName.name(), componentVendor.getLastDetail().getComponentVendorName(),
+                        entityTypeName);
             }
         } else {
             addExecutionError(ExecutionErrors.UnknownComponentVendorName.name(), componentVendorName);
         }
-        
+
+        return entityAttributes;
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<EntityAttribute> entities) {
+        var result = CoreResultFactory.getGetEntityAttributesResult();
+
+        if(entities != null) {
+            var coreControl = getCoreControl();
+
+            result.setEntityAttributes(coreControl.getEntityAttributeTransfers(getUserVisit(), entities, null));
+        }
+
         return result;
     }
-    
+
 }
