@@ -18,81 +18,75 @@ package com.echothree.control.user.core.server.command;
 
 import com.echothree.control.user.core.common.form.GetEntityLongRangesForm;
 import com.echothree.control.user.core.common.result.CoreResultFactory;
-import com.echothree.control.user.core.common.result.GetEntityLongRangesResult;
 import com.echothree.model.control.core.common.EntityAttributeTypes;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.core.server.entity.ComponentVendor;
 import com.echothree.model.data.core.server.entity.EntityAttribute;
-import com.echothree.model.data.core.server.entity.EntityAttributeType;
-import com.echothree.model.data.core.server.entity.EntityType;
+import com.echothree.model.data.core.server.entity.EntityLongRange;
 import com.echothree.model.data.core.server.factory.EntityLongRangeFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetEntityLongRangesCommand
-        extends BaseSimpleCommand<GetEntityLongRangesForm> {
-    
+        extends BaseMultipleEntitiesCommand<EntityLongRange, GetEntityLongRangesForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                        new SecurityRoleDefinition(SecurityRoleGroups.EntityLongRange.name(), SecurityRoles.List.name())
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.EntityLongRange.name(), SecurityRoles.List.name()
                         )))
-                )));
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ComponentVendorName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("EntityTypeName", FieldType.ENTITY_TYPE_NAME, true, null, null),
                 new FieldDefinition("EntityAttributeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetEntityLongRangesCommand */
     public GetEntityLongRangesCommand(UserVisitPK userVisitPK, GetEntityLongRangesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
-    @Override
-    protected BaseResult execute() {
-        var coreControl = getCoreControl();
-        GetEntityLongRangesResult result = CoreResultFactory.getGetEntityLongRangesResult();
-        String componentVendorName = form.getComponentVendorName();
-        ComponentVendor componentVendor = coreControl.getComponentVendorByName(componentVendorName);
-        
-        if(componentVendor != null) {
-            String entityTypeName = form.getEntityTypeName();
-            EntityType entityType = coreControl.getEntityTypeByName(componentVendor, entityTypeName);
-            
-            if(entityType != null) {
-                String entityAttributeName = form.getEntityAttributeName();
-                EntityAttribute entityAttribute = coreControl.getEntityAttributeByName(entityType, entityAttributeName);
-                
-                if(entityAttribute != null) {
-                    EntityAttributeType entityAttributeType = entityAttribute.getLastDetail().getEntityAttributeType();
-                    String entityAttributeTypeName = entityAttributeType.getEntityAttributeTypeName();
-                    
-                    if(entityAttributeTypeName.equals(EntityAttributeTypes.LONG.name())) {
-                        if(session.hasLimit(EntityLongRangeFactory.class)) {
-                            result.setEntityLongRangeCount(coreControl.countEntityLongRanges(entityAttribute));
-                        }
 
-                        result.setEntityAttribute(coreControl.getEntityAttributeTransfer(getUserVisit(), entityAttribute, null));
-                        result.setEntityLongRanges(coreControl.getEntityLongRangeTransfersByEntityAttribute(getUserVisit(), entityAttribute, null));
+    EntityAttribute entityAttribute;
+
+    @Override
+    protected Collection<EntityLongRange> getEntities() {
+        var coreControl = getCoreControl();
+        var componentVendorName = form.getComponentVendorName();
+        var componentVendor = coreControl.getComponentVendorByName(componentVendorName);
+        Collection<EntityLongRange> entityLongRanges = null;
+
+        if(componentVendor != null) {
+            var entityTypeName = form.getEntityTypeName();
+            var entityType = coreControl.getEntityTypeByName(componentVendor, entityTypeName);
+
+            if(entityType != null) {
+                var entityAttributeName = form.getEntityAttributeName();
+
+                entityAttribute = coreControl.getEntityAttributeByName(entityType, entityAttributeName);
+
+                if(entityAttribute != null) {
+                    var entityAttributeType = entityAttribute.getLastDetail().getEntityAttributeType();
+                    var entityAttributeTypeName = entityAttributeType.getEntityAttributeTypeName();
+
+                    if(entityAttributeTypeName.equals(EntityAttributeTypes.LONG.name())) {
+                        entityLongRanges = coreControl.getEntityLongRanges(entityAttribute);
                     } else {
                         addExecutionError(ExecutionErrors.InvalidEntityAttributeType.name(), componentVendorName, entityTypeName, entityAttributeName,
                                 entityAttributeTypeName);
@@ -106,8 +100,27 @@ public class GetEntityLongRangesCommand
         } else {
             addExecutionError(ExecutionErrors.UnknownComponentVendorName.name(), componentVendorName);
         }
-        
+
+        return entityLongRanges;
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<EntityLongRange> entities) {
+        var result = CoreResultFactory.getGetEntityLongRangesResult();
+
+        if(entities != null) {
+            var coreControl = getCoreControl();
+            var userVisit = getUserVisit();
+
+            if(session.hasLimit(EntityLongRangeFactory.class)) {
+                result.setEntityLongRangeCount(coreControl.countEntityLongRanges(entityAttribute));
+            }
+
+            result.setEntityAttribute(coreControl.getEntityAttributeTransfer(userVisit, entityAttribute, null));
+            result.setEntityLongRanges(coreControl.getEntityLongRangeTransfers(userVisit, entities, null));
+        }
+
         return result;
     }
-    
+
 }
